implemented input screen

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -43,6 +43,6 @@ body {
   height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template-rows: 100vh 12.5vh 12.5vh 75vh;
+  grid-template-rows: 20vh 80vh;
   grid-template-columns: 1fr 1fr;
 }
