--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -43,6 +43,6 @@ body {
   height: 100vh;
   width: 100vw;
   display: grid;
-  grid-template-rows: 20vh 80vh;
+  grid-template-rows: 24vh 7vh 41vh 0.5vh 5vh 5vh 10vh 4.5vh;
   grid-template-columns: 1fr 1fr;
 }
