--- a/client/src/scss/base/_base.scss
+++ b/client/src/scss/base/_base.scss
@@ -45,4 +45,5 @@ body {
   display: grid;
   grid-template-rows: 24vh 7vh 41vh 0.5vh 5vh 2.5vh 10vh 10vh;
   grid-template-columns: 1fr 1fr;
+  overflow: hidden;
 }
